--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.minorityhobbies</groupId>
 	<artifactId>jutils</artifactId>
-	<version>1.4-SNAPSHOT</version>
+	<version>1.5-SNAPSHOT</version>
 	<name>Core Java Utilities module</name>
 
     <scm>
         <connection>scm:git:https://github.com/jacksonps4/jutils.git</connection>
         <developerConnection>scm:git:git@github.com:jacksonps4/jutils.git</developerConnection>
         <url>https://github.com/jacksonps4</url>
-    </scm>
+      <tag>HEAD</tag>
+  </scm>
 
 	<dependencies>
 		<dependency>
