--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,29 @@
 	<artifactId>jutils</artifactId>
 	<version>1.8-SNAPSHOT</version>
 	<name>Core Java Utilities module</name>
-
+	
+	<licenses>
+		<license>
+			<name>The MIT License (MIT)</name>
+			<distribution>repo</distribution>
+			<url>http://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
+	
+	<developers>
+		<developer>
+			<id>chrisw</id>
+			<name>Chris Wraith</name>
+			<email>chrisw@minorityhobbies.com</email>
+		</developer>
+	</developers>
+	
     <scm>
         <connection>scm:git:https://github.com/jacksonps4/jutils.git</connection>
         <developerConnection>scm:git:git@github.com:jacksonps4/jutils.git</developerConnection>
         <url>https://github.com/jacksonps4</url>
-      <tag>HEAD</tag>
-  </scm>
+      	<tag>HEAD</tag>
+  	</scm>
 
 	<dependencies>
 		<dependency>
@@ -21,6 +37,23 @@
 		</dependency>
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>releases-repository</id>
+			<url>https://minorityhobbies.com/maven/repositories/releases</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>snapshots-repository</id>
+			<url>https://minorityhobbies.com/maven/repositories/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	
     <distributionManagement>
         <repository>
             <id>releases-repository</id>
@@ -28,7 +61,7 @@
             <url>scpexe://minorityhobbies.com/maven/repositories/releases</url>
         </repository>
         <snapshotRepository>
-            <id>releases-repository</id>
+            <id>snapshots-repository</id>
             <uniqueVersion>true</uniqueVersion> 
             <url>scpexe://minorityhobbies.com/maven/repositories/snapshots</url>
         </snapshotRepository>
